--- a/src/studio/dashboard.fxml
+++ b/src/studio/dashboard.fxml
@@ -5,7 +5,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -119,14 +118,7 @@
                         </Pane>
                      </children>
                   </Pane>
-                  <TableView layoutX="28.0" layoutY="52.0" prefHeight="373.0" prefWidth="793.0">
-                    <columns>
-                      <TableColumn fx:id="colNr" prefWidth="75.0" text="#" />
-                      <TableColumn fx:id="colDay" prefWidth="75.0" text="Day" />
-                        <TableColumn fx:id="colSales" prefWidth="75.0" text="Sales" />
-                        <TableColumn fx:id="colOnlineH" prefWidth="161.0" text="Online Hours" />
-                    </columns>
-                  </TableView>
+                  <TableView fx:id="table" layoutX="28.0" layoutY="52.0" prefHeight="373.0" prefWidth="793.0" />
                </children>
             </AnchorPane>
             <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="379.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
