--- a/src/studio/FXMLDocument.fxml
+++ b/src/studio/FXMLDocument.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="studio.FXMLDocumentController">
    <children>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="276.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imageLogo" fitHeight="150.0" fitWidth="200.0" layoutX="276.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/logo2.png" />
          </image>
@@ -45,31 +45,36 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <JFXTextField id="model1" fx:id="model1" layoutX="6.0" layoutY="23.0" prefHeight="37.0" prefWidth="259.0" text="model1@studio20.com">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </JFXTextField>
-      <Label layoutX="1.0" layoutY="3.0" prefHeight="17.0" prefWidth="129.0" text="Random Models(test)" />
-      <JFXTextField id="model2" fx:id="model2" layoutX="6.0" layoutY="49.0" prefHeight="37.0" prefWidth="259.0" text="model2@studio20.com">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </JFXTextField>
-      <JFXTextField id="model3" fx:id="model3" layoutX="6.0" layoutY="75.0" prefHeight="37.0" prefWidth="259.0" text="model3@studio20.com">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </JFXTextField>
-      <JFXTextField id="model4" fx:id="model4" layoutX="6.0" layoutY="102.0" prefHeight="37.0" prefWidth="259.0" text="model4@studio20.com">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </JFXTextField>
-      <JFXTextField id="model5" fx:id="model5" layoutX="6.0" layoutY="130.0" prefHeight="37.0" prefWidth="259.0" text="model5@studio20.com">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </JFXTextField>
+      <AnchorPane fx:id="debugwindow" layoutX="6.0" layoutY="2.0" prefHeight="200.0" prefWidth="259.0">
+         <children>
+            <Label prefHeight="17.0" prefWidth="129.0" text="Random Models(test)" />
+            <JFXTextField id="model2" fx:id="model2" layoutY="63.0" prefHeight="37.0" prefWidth="259.0" text="model2@studio20.com">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </JFXTextField>
+            <JFXTextField id="model1" fx:id="model1" layoutY="26.0" prefHeight="37.0" prefWidth="259.0" text="model1@studio20.com">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </JFXTextField>
+            <JFXTextField id="model3" fx:id="model3" layoutY="94.0" prefHeight="37.0" prefWidth="259.0" text="model3@studio20.com">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </JFXTextField>
+            <JFXTextField id="model4" fx:id="model4" layoutY="123.0" prefHeight="37.0" prefWidth="259.0" text="model4@studio20.com">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </JFXTextField>
+            <JFXTextField id="model5" fx:id="model5" layoutY="159.0" prefHeight="37.0" prefWidth="259.0" text="model5@studio20.com">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </JFXTextField>
+         </children>
+      </AnchorPane>
+      <JFXButton fx:id="togBtn" layoutX="14.0" layoutY="230.0" onMouseClicked="#handleToggle" text="hide" />
    </children>
 </AnchorPane>
