--- a/src/studio/FXMLDocument.fxml
+++ b/src/studio/FXMLDocument.fxml
@@ -17,7 +17,7 @@
             <Image url="@images/logo2.png" />
          </image>
       </ImageView>
-      <JFXTextField id="user" fx:id="user" alignment="CENTER" depthTest="ENABLE" focusColor="RED" layoutX="248.0" layoutY="223.0" prefHeight="25.0" prefWidth="205.0" promptText="E-mail" style="-fx-border-color: #000000;" unFocusColor="#ebe8e8">
+      <JFXTextField id="user" fx:id="user" alignment="CENTER" depthTest="ENABLE" focusColor="RED" layoutX="248.0" layoutY="226.0" prefHeight="25.0" prefWidth="205.0" promptText="E-mail" style="-fx-border-color: #000000;" unFocusColor="#ebe8e8">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
@@ -25,12 +25,12 @@
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
          </opaqueInsets>
       </JFXTextField>
-      <JFXPasswordField alignment="CENTER" focusColor="RED" layoutX="248.0" layoutY="272.0" prefHeight="25.0" prefWidth="205.0" promptText="PASSWORD" style="-fx-border-color: #000000;" unFocusColor="#ebe8e8">
+      <JFXPasswordField fx:id="password" alignment="CENTER" focusColor="RED" layoutX="248.0" layoutY="275.0" prefHeight="25.0" prefWidth="205.0" promptText="PASSWORD" style="-fx-border-color: #000000;" unFocusColor="#ebe8e8">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </JFXPasswordField>
-      <JFXButton fx:id="btn_login" layoutX="248.0" layoutY="322.0" onAction="#handleButtonAction" prefHeight="25.0" prefWidth="205.0" style="-fx-background-color: #E45652;" text="Log In" textFill="WHITE">
+      <JFXButton fx:id="btn_login" layoutX="248.0" layoutY="326.0" onAction="#handleButtonAction" prefHeight="25.0" prefWidth="205.0" style="-fx-background-color: #E45652;" text="Log In" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font>
@@ -40,7 +40,7 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="267.0" layoutY="170.0" prefHeight="38.0" prefWidth="169.0" text="MODEL LOGIN" textAlignment="CENTER" wrapText="true">
+      <Label layoutX="267.0" layoutY="160.0" prefHeight="38.0" prefWidth="169.0" text="MODEL LOGIN" textAlignment="CENTER" wrapText="true">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -75,6 +75,11 @@
             </JFXTextField>
          </children>
       </AnchorPane>
-      <JFXButton fx:id="togBtn" layoutX="14.0" layoutY="230.0" onMouseClicked="#handleToggle" text="hide" />
+      <JFXButton fx:id="togBtn" layoutY="374.0" onMouseClicked="#handleToggle" />
+      <Label fx:id="loginStatus" contentDisplay="CENTER" layoutX="246.0" layoutY="202.0" prefHeight="17.0" prefWidth="205.0" textAlignment="CENTER" textFill="RED">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
